--- a/credentials.yml
+++ b/credentials.yml
@@ -26,6 +26,11 @@ rest:
 #  token: "<bot token>"
 #  webhook_url: "<callback URL>"
 
+twilio:
+  account_sid: "AC9875ac72482f42abb31f9ba99f32209e"
+  auth_token: "cfa905f19ff85ecc1a3b834f9c026920"
+  twilio_number: "whatsapp:+14155238886"
+
 # This entry is needed if you are using Rasa X. The entry represents credentials 
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
