--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
     - master
-    paths:
-    - 'actions/**'
+    # paths:
+    # - 'actions/**'
 
 jobs:
   action_server_job:
