--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Login to DockerHub Registry 🔢
-        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ env.DOCKER_HUB_LOGIN }} --password-stdin || true
+        run: docker login -u ${{ env.DOCKER_HUB_LOGIN }} --password-stdin || true
 
 
   action_server_job:
