--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -24,13 +24,5 @@ jobs:
         actions_directory: 'actions'
         docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
         docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        docker_image_tag: ${{ env.BUILD_NUMBER }}
-    - name: My action server image
-      uses: RasaHQ/action-server-gha@master
-      with: 
-        rasa_sdk_version: 1.10.0
-        docker_image_name: 't4grasafamilienlotse1/rasa_familienlotse_action_server'
-        actions_directory: 'actions'
-        docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
-        docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         docker_image_tag: latest
+        # docker_image_tag: ${{ env.BUILD_NUMBER }}
