--- a/domain.yml
+++ b/domain.yml
@@ -50,6 +50,25 @@ slots:
     type: unfeaturized
   elterngeld_residence:
     type: unfeaturized
+    # type: text
+    # type: categorical
+    # values:
+    # - Baden-Württemberg
+    # - Bayern
+    # - Berlin
+    # - Brandenburg
+    # - Bremen
+    # - Hamburg
+    # - Hessen
+    # - Mecklenburg-Vorpommern
+    # - Niedersachsen
+    # - Nordrhein-Westfalen
+    # - Rheinland-Pfalz
+    # - Saarland
+    # - Sachsen
+    # - Sachsen-Anhalt
+    # - Schleswig-Holstein
+    # - Thüringen 
   familydescription_pregnancy_month:
     type: unfeaturized
   familydescription_parent:
@@ -61,22 +80,23 @@ responses:
     - text: "Hallo, ich bin **Sonne**! 🌞 \n
         Ich kann Dich hier oder langfristig auf WhatsApp über Themen rund um **Familienleistungen** informieren und beraten."  
   utter_welcomeback:
-  - text: Hallo, schön, wieder von Dir zu hören.
-  - text: Schön, dass Du wieder da bist.
-  - text: Willkommen zurück.
+  - text: Hallo, schön, wieder von Dir zu hören 🌞
+  - text: Schön, dass Du wieder da bist 🌞
+  - text: Willkommen zurück 🌞
   utter_welcomeback_time:
   - text: "Hey, nur noch **9** Wochen bis zum großen Tag! ✨"
   utter_goodbye:
-  - text: Ok, dann bis zum nächsten Mal!
+  - text: "Ok, dann bis zum nächsten Mal! 🌞"
   utter_ask_continue:
   - text: Tut mir leid, ich kann Dir gerade nicht ganz folgen. Möchtest Du weitermachen?
   utter_im_here_4_u:
   - text: "Melde Dich gerne bei mir, wenn Du noch etwas brauchst 🌞"
-  - text: "Das war es vorerst von mir. Wenn Du noch Fragen hast, bin ich hier für Dich. Ansonsten lese ich mir ein paar Informationen zu weiteren Themen durch."
+  - text: "Wenn Du trotzdem noch Fragen haben solltest, kannst Du sie mir jederzeit stellen 🌞"
+  - text: "Das war es vorerst von mir. Wenn Du noch Fragen hast, melde Dich gerne."
   utter_hope_help:
   - text: "Alles klar. Ich hoffe, ich konnte Dir helfen 🌞"
   utter_whatsapp_offer:
-  - text: "Übrigens - Du kannst mich gerne auch auf WhatsApp hinzufügen. Dann kann ich Dich im passenden Moment über weitere Familienleistungen und Fristen informieren."
+  - text: "Übrigens - Du kannst mich gerne auch auf WhatsApp hinzufügen. Dann kann ich Dich im passenden Moment über weitere Familienleistungen und Fristen informieren 💡"
     buttons:
     - payload: /affirm
       title: "Zu WhatsApp hinzufügen"
@@ -114,12 +134,12 @@ responses:
       findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
   - text: "In der Zwischenzeit findest Du mehr Infos zum Elterngeld auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
   utter_elterngeld_inform:
-  - text: Elterngeld ist eine Leistung, die Du vom Staat als Unterstützung erhalten
-      kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest.
+  - text: "**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
+      kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest 🤓"
   utter_ask_elterngeld_subtopic:
-  - text: Ich kann Dir jetzt mehr zu den Voraussetzungen, der Beantragung, der Höhe
-      oder der Bezugsdauer des Elterngeldes erzählen. Möchtest Du zu einem dieser
-      Themen mehr wissen?
+  - text: "Ich kann Dir jetzt mehr zu den **Voraussetzungen**, der **Beantragung**, der **Höhe**
+      oder der **Bezugsdauer** des Elterngeldes erzählen. \n Möchtest Du zu einem dieser
+      Themen mehr wissen?"
     buttons:
     - payload: /choose_elterngeld_requirements
       title: Voraussetzungen
@@ -130,38 +150,38 @@ responses:
     - payload: /choose_elterngeld_duration
       title: Bezugsdauer
   utter_ask_elterngeld_situation:
-  - text: Lass uns herausfinden, ob Du die **Voraussetzungen** erfüllst. Kann ich Dir
-      dafür ein paar Fragen zu Deiner Situation stellen?
+  - text: "Lass uns herausfinden, ob Du die **Voraussetzungen** erfüllst 🔍  \n Kann ich Dir
+      dafür ein paar Fragen zu Deiner Situation stellen?"
     buttons:
     - payload: /affirm
       title: Ja
     - payload: /deny
       title: Nein
   utter_ask_elterngeld_care:
-  - text: Ok, erste Frage. Wirst Du Dein Kind selbst betreuen?
+  - text: "Ok, erste Frage. Wirst Du Dein Kind selbst betreuen? 👶 "
     buttons:
     - payload: '/affirm{"elterngeld_care": "ja"}'
       title: Ja
     - payload: '/deny{"elterngeld_care": "nein"}'
       title: Nein
   utter_ask_elterngeld_samehousehold:
-  - text: Ok, wirst Du mit Deinem Kind in einem Haushalt leben?
+  - text: "Ok, wirst Du mit Deinem Kind in einem Haushalt leben? 🏘️"
     buttons:
     - payload: '/affirm{"elterngeld_samehousehold": "ja"}'
       title: Ja
     - payload: '/deny{"elterngeld_samehousehold": "nein"}'
       title: Nein
   utter_ask_elterngeld_workparttime:
-  - text: Wirst Du nach der Geburt weniger als 30 Stunden in der Woche arbeiten?
+  - text: "Wirst Du nach der Geburt weniger als 30 Stunden in der Woche arbeiten?🕰️"
     buttons:
     - payload: '/affirm{"elterngeld_workparttime": "ja"}'
       title: Ja
     - payload: '/deny{"elterngeld_workparttime": "nein"}'
       title: Nein
   utter_ask_elterngeld_residence:
-  - text: 'Letzte Frage: In welchem Bundesland lebst Du? Solltest Du außerhalb von Deutschland leben, antworte mit **Ausland**.'
+  - text: "Letzte Frage: In welchem Bundesland lebst Du? Wenn Du nicht in Deutschland lebst, antworte bitte mit **Ausland** 📍"
   utter_elterngeld_affirm_prerequisites:
-  - text: Super, Du erfüllst die Voraussetzungen für das Elterngeld!
+  - text: "Super, Du erfüllst die Voraussetzungen für das Elterngeld! 🎉"
   utter_ask_elterngeld_furthertopic:
   - text: Soll ich Dir sonst noch etwas zu **Beantragung**, **Höhe** oder **Bezugsdauer** von Elterngeld erklären?
     buttons:
@@ -172,10 +192,14 @@ responses:
     - payload: /choose_elterngeld_duration
       title: Bezugsdauer
   utter_elterngeld_inform_prerequisites:
-  - text: Du musst die folgenden Voraussetzungen erfüllen, um Elterngeld beziehen
-      zu können. - Du lebst in Deutschland. - Du wohnst mit Deinem Kind zusammen.
-      - Du betreust Dein Kind selbst. - Du arbeitest höchstens 30 Stunden pro Woche.
-  
+  - text: "Du musst die folgenden Voraussetzungen erfüllen, um Elterngeld beziehen
+      zu können. \n - Du lebst in Deutschland. \n - Du wohnst mit Deinem Kind zusammen. \n
+      - Du betreust Dein Kind selbst. \n - Du arbeitest höchstens 30 Stunden pro Woche."
+  utter_elterngeld_application_elterngelddigital:
+  - text: "Da Du in {elterngeld_residence} wohnst, kannst Du den Elterngeldantrag bei [🔗 Elterngeld Digital](https://www.elterngeld-digital.de/ams/Elterngeld/wizardng/FFE7CD?v=1601979713870) digital ausfüllen. Anschließend musst Du ihn ausdrucken und an Deine Elterngeldstelle schicken. Deine Elterngeldstelle findest Du [🔗 hier](https://familienportal.de/action/familienportal/125008/action/suche)."
+  utter_elterngeld_application_bawue:
+  - text: "Da Du in {elterngeld_residence} wohnst, kannst Du den Elterngeldantrag [🔗  hier](https://www.l-bank.de/produkte/familienfoerderung/elterngeld.html) digital ausfüllen. Anschließend musst Du ihn ausdrucken und an Deine Elterngeldstelle schicken. Deine Elterngeldstelle findest Du [🔗 hier](https://familienportal.de/action/familienportal/125008/action/suche)."
+
   # mutterschutz
   utter_ask_mutterschutz_question:
   - text: "Es sieht aus, als hast Du Dich gerade mit dem Thema **Mutterschutz** beschäftigt. \n
