bugfixing action server

--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
     - master
-    paths:
-    - 'actions/**'
+    # paths:
+    # - 'actions/**'
 
 jobs:
   action_server_job:
@@ -15,7 +15,6 @@ jobs:
       uses: actions/checkout@v2
     - name: Set Build ID from run ID and number
       run: echo "BUILD_NUMBER=$GITHUB_RUN_NUMBER-$GITHUB_RUN_ID" >> $GITHUB_ENV
-
     - name: My action server image
       uses: RasaHQ/action-server-gha@master
       with: 
