--- a/domain.yml
+++ b/domain.yml
@@ -98,7 +98,7 @@ responses:
   utter_whatsapp_offer:
   - text: "Übrigens - Du kannst mich gerne auch auf WhatsApp hinzufügen. Dann kann ich Dich im passenden Moment über weitere Familienleistungen und Fristen informieren 💡"
     buttons:
-    - payload: /affirm
+    - payload: /choose_whatsapp
       title: "Zu WhatsApp hinzufügen"
   # TODO: transform to button w/ WhatsApp Link
   utter_whatsapp_contact:
@@ -111,14 +111,14 @@ responses:
     - text: "Das kann ich Dir leider noch nicht beantworten."
     - text: "Die Details dazu kenne ich leider noch nicht 🙈"  
   utter_more_info:
-    - text: "Du hast Dich zuletzt nach Mutterschutz erkundigt. Es gibt noch viele weitere Familienleistungen, die für Dich relevant sein könnten."
+    - text: "Du hast Dich zuletzt nach **Mutterschutz** erkundigt. Es gibt noch viele weitere Familienleistungen, die für Dich relevant sein könnten."
   # elterngeld
-  utter_elterngeld_slots:
-  - text: "Sie haben folgende Angaben gemacht: \n
-            - care: {elterngeld_care}\n
-            - samehousehold: {elterngeld_samehousehold}\n
-            - workparttime: {elterngeld_workparttime}\n
-            - livegermany: {elterngeld_residence}"
+  # utter_elterngeld_slots:
+  # - text: "Sie haben folgende Angaben gemacht: \n
+  #           - care: {elterngeld_care}\n
+  #           - samehousehold: {elterngeld_samehousehold}\n
+  #           - workparttime: {elterngeld_workparttime}\n
+  #           - livegermany: {elterngeld_residence}"
   utter_elterngeld_precise_general:
   - text: Hast Du eine konkrete Frage zum **Elterngeld**? Oder soll ich Dir erstmal ein
       paar allgemeine Infos dazu geben?
@@ -132,13 +132,13 @@ responses:
   utter_elterngeld_reply_outofscope:
   - text: "Mehr Infos zu **Elterngeld**
       findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
-  - text: "In der Zwischenzeit findest Du mehr Infos zum Elterngeld auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
+  - text: "In der Zwischenzeit findest Du mehr Infos zum **Elterngeld** auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
   utter_elterngeld_inform:
   - text: "**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
       kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest 🤓"
   utter_ask_elterngeld_subtopic:
   - text: "Ich kann Dir jetzt mehr zu den **Voraussetzungen**, der **Beantragung**, der **Höhe**
-      oder der **Bezugsdauer** des Elterngeldes erzählen. \n Möchtest Du zu einem dieser
+      oder der **Bezugsdauer** des **Elterngeldes** erzählen. \n Möchtest Du zu einem dieser
       Themen mehr wissen?"
     buttons:
     - payload: /choose_elterngeld_requirements
@@ -192,7 +192,7 @@ responses:
     - payload: /choose_elterngeld_duration
       title: Bezugsdauer
   utter_elterngeld_inform_prerequisites:
-  - text: "Du musst die folgenden Voraussetzungen erfüllen, um Elterngeld beziehen
+  - text: "Du musst die folgenden Voraussetzungen erfüllen, um **Elterngeld** beziehen
       zu können. \n - Du lebst in Deutschland. \n - Du wohnst mit Deinem Kind zusammen. \n
       - Du betreust Dein Kind selbst. \n - Du arbeitest höchstens 30 Stunden pro Woche."
   # utter_elterngeld_application_elterngelddigital:
@@ -207,8 +207,8 @@ responses:
     buttons:
     - payload: /choose_mutterschutz_general
       title: "Was ist Mutterschutz?"
-    - payload: /choose_whatsapp
-      title: "WhatsApp"
+    # - payload: /choose_whatsapp
+    #   title: "WhatsApp"
   utter_mutterschutz_differencereply:
   - text: "Der **Mutterschutz** ist ein besonderer Schutz für schwangere oder stillende Arbeitnehmerinnen. \n 
   Die **Mutterschutzfrist** hingegen ist ein Zeitraum vor und nach der Geburt, in dem die Arbeitnehmerin nicht arbeiten darf 🤓"
@@ -217,8 +217,6 @@ responses:
   utter_mutterschutz_reply_outofscope:
     - text: Das kann ich Dir leider noch nicht beantworten. Mehr Infos zu **Mutterschutz**
         findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/mutterschutz).
-  utter_moreinfo:
-    - text: "Du hast Dich zuletzt nach Mutterschutz erkundigt. Es gibt noch viele weitere Familienleistungen, die für Dich relevant sein könnten."
   utter_ask_permission_familydescription:
     - text: "Am besten kann ich Dich dazu beraten, wenn Du mir etwas  über Dich erzählst. Einverstanden? 🤓"
   utter_ask_familydescription:
@@ -229,7 +227,7 @@ responses:
     - text: "Bist Du schwanger? Wenn ja, in welchem Monat?"
     # TODO: Buttons zur Benutzersteuerung?
   utter_recommend_elterngeld:
-    - text: "Super, danke! Als werdende(r) {familydescription_parent} könnte auch Elterngeld für Dich interessant sein."
+    - text: "Super, danke! Als werdende(r) {familydescription_parent} könnte auch **Elterngeld** für Dich interessant sein."
   utter_ask_elterngeld_priorknowledge:
     - text: "Hast Du Dich damit schon beschäftigt?"
 
@@ -250,7 +248,7 @@ responses:
       - payload: /choose_elternzeit_duration
         title: "Bezugsdauer"
   utter_elternzeit_timepartner:
-    - text: "Ja, für Mütter beginnt die Elternzeit frühestens nach dem Ende der Mutterschutzfrist. Also hast Du noch genug Zeit bis zur Anmeldung 🐢"
+    - text: "Ja, für Mütter beginnt die **Elternzeit** frühestens nach dem Ende der **Mutterschutzfrist**. Also hast Du noch genug Zeit bis zur Anmeldung 🐢"
   utter_elternzeit_reply_outofscope:
     - text: "Aber schau doch mal hier auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810)."
   
